--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "turborepo",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:DanBertrand/turbo-repo.git",
-  "author": "Danny",
-  "license": "MIT",
-
+  "name": "borabora",
+  "version": "0.0.0",
+  "private": true,
+  "workspaces": [
+    "platform/",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "build": "turbo run build",
+    "dev": "turbo run dev --parallel",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0"
-  
-}
+    "prettier": "^2.5.1",
+    "turbo": "latest"
+  },
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=14.0.0"
+  },
+  "packageManager": "yarn@1.23.0-20220130.1630"
 }
